# SimpleCBLookup

./: .gitignore  README.md  RUN.sh  bulk_funding_query.py  setup.py  setup.sh
DOCS/: API_REFERENCE.md  CONFIGURATION.md  ENV_FILE.md  EXAMPLES.md  INSTALLATION.md  MENU_SYSTEM.md  MENU_UPDATE_SUMMARY.md  README.md  RESTRUCTURE_SUMMARY.md  SETUP_FIX_SUMMARY.md  USAGE.md  VENV_FIX.md
INPUT/: .gitkeep
OUTPUT/: .gitkeep
SPEC/: SPEC.txt
SRC/: bulk_funding_query.py  pyproject.toml  requirements.txt  setup.py
SRC/cb_downloader/: cli.py
SRC/localduck/: import_to_duckdb.py  query_funding_by_url.py
cb_downloader/: cli.py  collections.py
localduck/: import_to_duckdb.py  query_funding_by_url.py
